  * Add Separator.qml.
  * Change Logo and add InfoGroup.js.
  * Access weather data with python threading.
  * Change /usr/share/youker-assistant-daemon to /var/lib/youker-assistant-daemon.
  * Change UbuntuKylin to Ubuntu Kylin.
  * Modify calculation method of system memory allocation(LP: #1242579).
  * Refresh net speed every second to resolve the wrong displaying net flow(LP: #1237891).

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Mon, 16 Dec 2013 09:14:40 +0800

youker-assistant (0.2.4-0ubuntu1) saucy; urgency=low

  * Optimize button events of AuthDialog(LP: #1256183).
  * Fixed Dialog's movement and hazing when click a button(LP: #1255550).
  * Change some pictures of computer's detailed information.
  * All system configuration saved with QSetting.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 05 Dec 2013 14:26:53 +0800

youker-assistant (0.2.3-0ubuntu1) saucy; urgency=low

  * Add processmanager.
  * Add Google Chromium Cookies cleaner.
  * Change Chinese to English add add translation.
  * Adjust components space after it added translation.
  * Solve the segmentation fault when users cancel the previous Fcitx configuration(LP: #1252595).
  * Save and restore the default system configuration with QSetting.
  * Clear Cookies of Chromium(LP: #1224871).
  * Solve wrong status of history cleaning(LP: #1253852).
  * Popup a dialog to add UbuntuKylin sourcelist or not.
  * Display detailed information of Computer.
  * Display contents when one key scanning.
  * Add debian/postrm file to remove a folder when it is uninstalled.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 28 Nov 2013 21:01:35 +0800

youker-assistant (0.2.2-0ubuntu1) saucy; urgency=low

  * Change skin and add weather forecast information.
  * Get correct system information(LP: #1240862).
  * Get software list and software information dynamically.
  * Start sudodbus server at the same time to scan package cruft(LP: #1242498).